src/lib_gd/repository.cr

  fun image_sharpen = gdImageSharpen(im : ImagePtr, pct : LibC::Int)
  fun image_smooth = gdImageSmooth(im : ImagePtr, weight : LibC::Float) : LibC::Int
  fun image_square_to_circle = gdImageSquareToCircle(im : ImagePtr, radius : LibC::Int) : ImagePtr
  fun image_string = gdImageString(im : ImagePtr, f : FontPtr, x : LibC::Int, y : LibC::Int, s : UInt8*, color : LibC::Int)
  fun image_string16 = gdImageString16(im : ImagePtr, f : FontPtr, x : LibC::Int, y : LibC::Int, s : LibC::UShort*, color : LibC::Int)
  fun image_string_ft = gdImageStringFT(im : ImagePtr, brect : LibC::Int*, fg : LibC::Int, fontlist : LibC::Char*, ptsize : LibC::Double, angle : LibC::Double, x : LibC::Int, y : LibC::Int, string : LibC::Char*) : LibC::Char*
  fun image_string_ft_circle = gdImageStringFTCircle(im : ImagePtr, cx : LibC::Int, cy : LibC::Int, radius : LibC::Double, text_radius : LibC::Double, fill_portion : LibC::Double, font : LibC::Char*, points : LibC::Double, top : LibC::Char*, bottom : LibC::Char*, fgcolor : LibC::Int) : LibC::Char*
  fun image_string_ft_ex = gdImageStringFTEx(im : ImagePtr, brect : LibC::Int*, fg : LibC::Int, fontlist : LibC::Char*, ptsize : LibC::Double, angle : LibC::Double, x : LibC::Int, y : LibC::Int, string : LibC::Char*, strex : FtStringExtraPtr) : LibC::Char*
  fun image_string_ttf = gdImageStringTTF(im : ImagePtr, brect : LibC::Int*, fg : LibC::Int, fontlist : LibC::Char*, ptsize : LibC::Double, angle : LibC::Double, x : LibC::Int, y : LibC::Int, string : LibC::Char*) : LibC::Char*
  fun image_string_up = gdImageStringUp(im : ImagePtr, f : FontPtr, x : LibC::Int, y : LibC::Int, s : UInt8*, color : LibC::Int)
  fun image_string_up16 = gdImageStringUp16(im : ImagePtr, f : FontPtr, x : LibC::Int, y : LibC::Int, s : LibC::UShort*, color : LibC::Int)
  fun image_tiff = gdImageTiff(im : ImagePtr, out_file : File*)
  fun image_tiff_ctx = gdImageTiffCtx(image : ImagePtr, out : IoCtxPtr)
  fun image_tiff_ptr = gdImageTiffPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_true_color_to_palette = gdImageTrueColorToPalette(im : ImagePtr, dither_flag : LibC::Int, colors_wanted : LibC::Int) : LibC::Int
  fun image_true_color_to_palette_set_method = gdImageTrueColorToPaletteSetMethod(im : ImagePtr, method : LibC::Int, speed : LibC::Int) : LibC::Int
  fun image_true_color_to_palette_set_quality = gdImageTrueColorToPaletteSetQuality(im : ImagePtr, min_quality : LibC::Int, max_quality : LibC::Int)
  fun image_wbmp = gdImageWBMP(image : ImagePtr, fg : LibC::Int, out : File*)
  fun image_wbmp_ctx = gdImageWBMPCtx(image : ImagePtr, fg : LibC::Int, out : IoCtxPtr)
  fun image_wbmp_ptr = gdImageWBMPPtr(im : ImagePtr, size : LibC::Int*, fg : LibC::Int) : LibC::Char*
  fun image_webp = gdImageWebp(im : ImagePtr, out_file : File*)
  fun image_webp_ctx = gdImageWebpCtx(im : ImagePtr, outfile : IoCtxPtr, quantization : LibC::Int)
  fun image_webp_ex = gdImageWebpEx(im : ImagePtr, out_file : File*, quantization : LibC::Int)
  fun image_webp_ptr = gdImageWebpPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_webp_ptr_ex = gdImageWebpPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_xbm_ctx = gdImageXbmCtx(image : ImagePtr, file_name : LibC::Char*, fg : LibC::Int, out : IoCtxPtr)
  fun layer_multiply = gdLayerMultiply(dest : LibC::Int, src : LibC::Int) : LibC::Int
  fun layer_overlay = gdLayerOverlay(dest : LibC::Int, src : LibC::Int) : LibC::Int
  fun major_version = gdMajorVersion : LibC::Int
  fun minor_version = gdMinorVersion : LibC::Int
  fun new_dynamic_ctx = gdNewDynamicCtx(size : LibC::Int, data : Void*) : IoCtxPtr
  fun new_dynamic_ctx_ex = gdNewDynamicCtxEx(size : LibC::Int, data : Void*, free_flag : LibC::Int) : IoCtxPtr
  fun new_file_ctx = gdNewFileCtx(x0 : File*) : IoCtxPtr
  fun new_ss_ctx = gdNewSSCtx(in : SourcePtr, out : SinkPtr) : IoCtxPtr
  fun put_buf = gdPutBuf(x0 : Void*, x1 : LibC::Int, x2 : IoCtxPtr) : LibC::Int
  fun put_c = gdPutC(c : UInt8, ctx : IoCtxPtr)
  fun put_int = gdPutInt(w : LibC::Int, ctx : IoCtxPtr)
  fun put_word = gdPutWord(w : LibC::Int, ctx : IoCtxPtr)
  fun release_version = gdReleaseVersion : LibC::Int
  fun seek = gdSeek(ctx : IoCtxPtr, offset : LibC::Int) : LibC::Int
  fun set_error_method = gdSetErrorMethod(x0 : ErrorMethod)
  fun supports_file_type = gdSupportsFileType(filename : LibC::Char*, writing : LibC::Int) : LibC::Int
  fun tell = gdTell(ctx : IoCtxPtr) : LibC::Long
  fun transform_affine_bounding_box = gdTransformAffineBoundingBox(src : RectPtr, affine : LibC::Double[6], bbox : RectPtr) : LibC::Int
  fun transform_affine_copy = gdTransformAffineCopy(dst : ImagePtr, dst_x : LibC::Int, dst_y : LibC::Int, src : ImagePtr, src_region : RectPtr, affine : LibC::Double[6]) : LibC::Int
  fun transform_affine_get_image = gdTransformAffineGetImage(dst : ImagePtr*, src : ImagePtr, src_area : RectPtr, affine : LibC::Double[6]) : LibC::Int
  fun version_string = gdVersionString : LibC::Char*

  struct Font
    nchars : LibC::Int
    offset : LibC::Int
    w : LibC::Int
    h : LibC::Int
    data : LibC::Char*
  end

  struct FtStringExtra
    flags : LibC::Int
    linespacing : LibC::Double
    charmap : LibC::Int
    hdpi : LibC::Int
    vdpi : LibC::Int
    xshow : LibC::Char*
    fontpath : LibC::Char*
  end

  struct Image
    pixels : UInt8**
    sx : LibC::Int
    sy : LibC::Int
    colors_total : LibC::Int
    red : LibC::Int[256]
    green : LibC::Int[256]
    blue : LibC::Int[256]
    open : LibC::Int[256]
    transparent : LibC::Int
    poly_ints : LibC::Int*
    poly_allocated : LibC::Int
    brush : Image*
    tile : Image*
    brush_color_map : LibC::Int[256]
    tile_color_map : LibC::Int[256]
    style_length : LibC::Int
    style_pos : LibC::Int
    style : LibC::Int*
    interlace : LibC::Int
    thick : LibC::Int
    alpha : LibC::Int[256]
    true_color : LibC::Int
    tpixels : LibC::Int**
    alpha_blending_flag : LibC::Int
    save_alpha_flag : LibC::Int
    aa : LibC::Int
    aa_color : LibC::Int
    aa_dont_blend : LibC::Int
    cx1 : LibC::Int
    cy1 : LibC::Int
    cx2 : LibC::Int
    cy2 : LibC::Int
    res_x : LibC::UInt
    res_y : LibC::UInt
    palette_quantization_method : LibC::Int
    palette_quantization_speed : LibC::Int
    palette_quantization_min_quality : LibC::Int
    palette_quantization_max_quality : LibC::Int
    interpolation_id : InterpolationMethodID
    interpolation : InterpolationMethod
  end

  struct IoCtx
    get_c : (IoCtxPtr -> LibC::Int)
    get_buf : (IoCtxPtr, Void*, LibC::Int -> LibC::Int)
    put_c : (IoCtxPtr, LibC::Int -> Void)
    put_buf : (IoCtxPtr, Void*, LibC::Int -> LibC::Int)
    seek : (IoCtxPtr, LibC::Int -> LibC::Int)
    tell : (IoCtxPtr -> LibC::Long)
    gd_free : (IoCtxPtr -> Void)
    data : Void*
  end

  struct PointF
    x : LibC::Double
    y : LibC::Double
  end

  struct Point
    x : LibC::Int
    y : LibC::Int
  end

  struct Rect
    x : LibC::Int
    y : LibC::Int
    width : LibC::Int
    height : LibC::Int
  end

  struct Scatter
    sub : LibC::Int
    plus : LibC::Int
    num_colors : LibC::UInt
    colors : LibC::Int*
    seed : LibC::UInt
  end

  struct Sink
    sink : (Void*, LibC::Char*, LibC::Int -> LibC::Int)
    context : Void*
  end

  struct Source
    source : (Void*, LibC::Char*, LibC::Int -> LibC::Int)
    context : Void*
  end

  struct X_IoFile
    _flags : LibC::Int
    _io_read_ptr : LibC::Char*
    _io_read_end : LibC::Char*
    _io_read_base : LibC::Char*
    _io_write_base : LibC::Char*
    _io_write_ptr : LibC::Char*
    _io_write_end : LibC::Char*
    _io_buf_base : LibC::Char*
    _io_buf_end : LibC::Char*
    _io_save_base : LibC::Char*
    _io_backup_base : LibC::Char*
    _io_save_end : LibC::Char*
    _markers : X_IoMarker*
    _chain : X_IoFile*
    _fileno : LibC::Int
    _flags2 : LibC::Int
    _old_offset : X__OffT
    _cur_column : LibC::UShort
    _vtable_offset : LibC::Char
    _shortbuf : LibC::Char[1]
    _lock : X_IoLockT*
    _offset : X__Off64T
    _codecvt : X_IoCodecvt*
    _wide_data : X_IoWideData*
    _freeres_list : X_IoFile*
    _freeres_buf : Void*
    __pad5 : LibC::SizeT
    _mode : LibC::Int
    _unused2 : LibC::Char[20]
  end

  type File = X_IoFile
end
